[UPDATE & FIX] tingkatkan endpoint API untuk manajemen asesmen dan jadwal, termasuk dukungan unggah file dan penyesuaian rute [ADD] docs
